--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Site settings
-title: 
-email: 
+title: 유레카 프로젝트 블로그 만들기-20201415 조민석
+email: kevincms314@kookmin.ac.kr
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
